# KoraAV

./: README.md  install.sh
KoraAV/: CMakeLists.txt  install.sh
KoraAV/bpf/: Makefile
KoraAV/bpf/monitors/: file_monitor.bpf.c  network_monitor.bpf.c  process_monitor.bpf.c
KoraAV/data/signatures/yara-rules/: .placeholder  backdoor.yar  cryptominer.yar  exploit.yar  infostealer.yar  linux_apt.yar  linux_backdoor.yar  linux_cryptominer.yar  linux_malware.yar  linux_ransomware.yar  linux_rootkit.yar  ransomware.yar
KoraAV/include/koraav/: types.h
KoraAV/src/cli/: daemon_main.cpp  hashdb_tool.cpp  koraav_main.cpp  koraav_scanner.cpp  rule_manager.cpp  unlock_command.cpp
KoraAV/src/common/: capabilities_manager.cpp  capabilities_manager.h  exclusion_manager.cpp  exclusion_manager.h  notification_manager.cpp  notification_manager.h  quarantine_manager.cpp  quarantine_manager.h  yara_manager.cpp  yara_manager.h
KoraAV/src/daemon/: control_socket.cpp  control_socket.h  koraav_daemon.cpp  koraav_daemon.h  secure_ipc.cpp  secure_ipc.h
KoraAV/src/notification-helper/: notification_helper_daemon.cpp
KoraAV/src/realtime-protection/behavioral-analysis/: c2_detector.cpp  c2_detector.h  canary_file_system.cpp  canary_file_system.h  clickfix_detector.cpp  clickfix_detector.h  infostealer_detector.cpp  infostealer_detector.h  ransomware_detector.cpp  ransomware_detector.h  snapshot_system.cpp  snapshot_system.h
KoraAV/src/realtime-protection/response/: exclusion_manager.cpp  firewall_manager.cpp  firewall_manager.h  lockdown_manager.cpp  lockdown_manager.h  quarantine_manager.cpp  quarantine_manager.h  snapshot_system.cpp  snapshot_system.h
KoraAV/src/realtime-protection/yara-realtime/: realtime_yara_scanner.cpp  realtime_yara_scanner.h
KoraAV/src/scanner/: archive_scanner.cpp  archive_scanner.h  file_scanner.cpp  file_scanner.h  scanner_engine.cpp  scanner_engine.h
KoraAV/src/scanner/heuristics/: entropy_analyzer.cpp  entropy_analyzer.h
KoraAV/src/scanner/signatures/: hash_db_manager.cpp  hash_db_manager.h  hash_scanner.cpp  hash_scanner.h  yara_scanner.cpp  yara_scanner.h
KoraAV/src/scanner/static-analysis/: elf_analyzer.cpp  elf_analyzer.h  script_analyzer.cpp  script_analyzer.h
